# Prefix_AAC_ICASSP2023

./: Experiment_Clotho.py  Experiment_FusionDataset.py  FusionDataset.py  Inference.py  Train.py  pyproject.toml
AAC_Prefix/: AAC_Prefix.py
coco_caption/: get_stanford_models.sh
